Updated project files

--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -20,9 +20,7 @@
     <div class="row justify-content-center">
         <div class="col-md-7">
 
-            <div class="card shadow p-4 text-center">
-
-                <!-- City -->
+            <div class="card shadow p-4 text-center">-- City -->
                 <h1 class="mb-1">
                     <span th:text="${weather.name}">City</span>,
                     <small class="text-muted" th:text="${weather.sys.country}">Country</small>
@@ -39,7 +37,8 @@
                     </div>
                 </div>
 
-                <!-- Details -->
+
+
                 <div class="info-row">
                     <img src="https://img.icons8.com/fluency/48/000000/humidity.png" class="info-icon">
                     <span class="info-label">Humidity:</span>
